<resources>
    <string name="app_name">UAS AKB</string>
    <string name="Login">Login</string>
    <string name="Register">Daftar</string>
    <string name="satu">Idle</string>
    <string name="Home">Home</string>
    <string name="Profil">Profil</string>
    <string name="Kontak">Kontak</string>
    <string name="DaftarTeman">Daftar Teman</string>
    <string name="Logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
</resources>
