<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/logout"
            android:title="@string/Home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/logout"
            android:title="@string/Profil" />
        <item
            android:id="@+id/kontak"
            android:icon="@drawable/logout"
            android:title="@string/Kontak" />
        <item
            android:id="@+id/daftar"
            android:icon="@drawable/logout"
            android:title="@string/DaftarTeman" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/logout"
            android:title="@string/Logout" />
    </group>
</menu>